   - bug 826 - Using uint64_t instead of Time in DcfManager
   - bug 828 - PacketSocket::Close does not unregister protocol handler
   - bug 842 - ns-3-dev crashes using block acks
   - bug 843 - Most wifi examples change BeaconInterval to unrealistic values
   - bug 844 - YansWifiPhy::GetPowerDbm off-by-one problem when calculating Tx 
               power
   - bug 853 - Rates for Wi-Fi control responses are incorrectly selected
   - bug 854 - Support DROP_QUEUE reason-code in Ipv4FlowProbe
   - bug 858 - support MSG_PEEK in IPv4/IPv6 raw socket
   - bug 861 - Forwarding drops (due to no route found) were not being logged 
               in IPv4 or IPv6 ascii traces
   - bug 869 - suggested test framework enhancements
   - bug 871 - naming for WifiPhyStandard
   - bug 873 - Queue occupancy counter not decremented in WifiMacQueue::Remove()
   - bug 874 - wrong modulation type is selected in the forwardBurst method
   - bug 875 - "frame includes FCS" flag should be set in Radiotap frame header
   - bug 875 - Set FCS included flag in Radiotap header
   - bug 881 - Reorganise to allow wider use of WifiInformationElement
   - bug 890 - several rate adaptation algorithms not tested by test.py
   - bug 900:  RawTextConfigLoad::Default does not load configurations
   - bug 901 - Optimize Mac48Address < != and ==
   - bug 902 - TCP: handle out-of-order packets during connection shutdown
   - bug 905 - WimaxNetDevice loses packet uid, tags, and memory optimization
   - bug 906 - NSC TCP socket fork did not copy txbuffersize over
   - bug 908 - test.py should exit if waf dies
   - bug 910 - Change Wi-Fi "AccessClass" to something closer to the standard
   - bug 911 - IPv4/v6 multicast forwarding not going to all output interfaces
   - bug 913 - Queue Enqueue/Drop trace sources behavior unintuitive
   - bug 916 - EnableAsciiAll ("prefix") does not work for YansWifiPhyHelper
   - bug 918 - samples/main-packet-header.cc is broken